force-app/main/default/objects/OpportunityContactRole/OpportunityContactRole.object-meta.xml
<CustomObject>
</CustomObject>