force-app/main/default/objects/OpportunityContactRole/fields/AcceptSuggestion__c.field-meta.xml
<CustomField>
    <fullName>AcceptSuggestion__c</fullName>
    <label>提案承諾日付</label>
    <type>Date</type>
</CustomField>