force-app/main/default/objects/OpportunityContactRole/fields/BuildAppKeyman__c.field-meta.xml
<CustomField>
    <fullName>BuildAppKeyman__c</fullName>
    <formula>TEXT( Contact.BuildAppKeyman__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BuildAppキーマン</label>
    <type>Text</type>
</CustomField>