force-app/main/default/objects/OpportunityContactRole/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>Contact.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>部署</label>
    <type>Text</type>
</CustomField>