force-app/main/default/objects/OpportunityContactRole/fields/DX_C_AcceptAppointment4__c.field-meta.xml
<CustomField>
    <fullName>DX_C_AcceptAppointment4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C:提案（キーマン紹介）のアポイント承諾_DX</label>
    <type>Checkbox</type>
</CustomField>