force-app/main/default/objects/OpportunityContactRole/fields/DX_C_AcceptNextSuggestion6__c.field-meta.xml
<CustomField>
    <fullName>DX_C_AcceptNextSuggestion6__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C:次回物件提案承諾_DX</label>
    <type>Checkbox</type>
</CustomField>