force-app/main/default/objects/OpportunityContactRole/fields/DX_C_BoothArrive1__c.field-meta.xml
<CustomField>
    <fullName>DX_C_BoothArrive1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C:展示会ブース来場_DX</label>
    <type>Checkbox</type>
</CustomField>