force-app/main/default/objects/OpportunityContactRole/fields/DX_C_RequestSuggestion4__c.field-meta.xml
<CustomField>
    <fullName>DX_C_RequestSuggestion4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C:提案を依頼される_DX</label>
    <type>Checkbox</type>
</CustomField>