force-app/main/default/objects/OpportunityContactRole/fields/DX_C_SalesStaffCall3__c.field-meta.xml
<CustomField>
    <fullName>DX_C_SalesStaffCall3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C:営業担当者への相談電話_DX</label>
    <type>Checkbox</type>
</CustomField>