force-app/main/default/objects/OpportunityContactRole/fields/DX_C_Webinar1__c.field-meta.xml
<CustomField>
    <fullName>DX_C_Webinar1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C:ウェビナー参加_DX</label>
    <type>Checkbox</type>
</CustomField>