force-app/main/default/objects/OpportunityContactRole/fields/DX_Keyman__c.field-meta.xml
<CustomField>
    <fullName>DX_Keyman__c</fullName>
    <formula>TEXT(Contact.DX_Keyman__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>キーマン_DX</label>
    <type>Text</type>
</CustomField>