force-app/main/default/objects/OpportunityContactRole/fields/DX_M_ListenIntroduction2__c.field-meta.xml
<CustomField>
    <fullName>DX_M_ListenIntroduction2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>M:BuildApp説明聞く_DX</label>
    <type>Checkbox</type>
</CustomField>