force-app/main/default/objects/OpportunityContactRole/fields/DX_O_AcceptAppointment2__c.field-meta.xml
<CustomField>
    <fullName>DX_O_AcceptAppointment2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>O:アポイント承諾2_DX</label>
    <type>Checkbox</type>
</CustomField>