force-app/main/default/objects/OpportunityContactRole/fields/DX_O_ListenBIM3__c.field-meta.xml
<CustomField>
    <fullName>DX_O_ListenBIM3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>O:内装BIM取組み意義聞く_DX</label>
    <type>Checkbox</type>
</CustomField>