force-app/main/default/objects/OpportunityContactRole/fields/DX_O_WebColumnBrowse3__c.field-meta.xml
<CustomField>
    <fullName>DX_O_WebColumnBrowse3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>O:Webコラム閲覧_DX</label>
    <type>Checkbox</type>
</CustomField>