force-app/main/default/objects/OpportunityContactRole/fields/DX_PerceptionLV__c.field-meta.xml
<CustomField>
    <fullName>DX_PerceptionLV__c</fullName>
    <formula>Contact.DX_PerceptionLvText__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>パーセプションLV_DX</label>
    <type>Text</type>
</CustomField>