force-app/main/default/objects/OpportunityContactRole/fields/ExhibitionParticipate__c.field-meta.xml
<CustomField>
    <fullName>ExhibitionParticipate__c</fullName>
    <label>展示会参加日付</label>
    <type>Date</type>
</CustomField>