force-app/main/default/objects/OpportunityContactRole/fields/FirstAppointment__c.field-meta.xml
<CustomField>
    <fullName>FirstAppointment__c</fullName>
    <label>初回訪問アポ日付</label>
    <type>Date</type>
</CustomField>