force-app/main/default/objects/OpportunityContactRole/fields/Issue1_A__c.field-meta.xml
<CustomField>
    <fullName>Issue1_A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>課題感_A</label>
    <type>Checkbox</type>
</CustomField>