force-app/main/default/objects/OpportunityContactRole/fields/Issue1_A_text__c.field-meta.xml
<CustomField>
    <fullName>Issue1_A_text__c</fullName>
    <label>課題感_A(自由記述)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>