force-app/main/default/objects/OpportunityContactRole/fields/Issue1_C__c.field-meta.xml
<CustomField>
    <fullName>Issue1_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>課題感_C</label>
    <type>Checkbox</type>
</CustomField>