force-app/main/default/objects/OpportunityContactRole/fields/JU_C_GetFirstInterview1__c.field-meta.xml
<CustomField>
    <fullName>JU_C_GetFirstInterview1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C:担当者と初回面談獲得_JU</label>
    <type>Checkbox</type>
</CustomField>