force-app/main/default/objects/OpportunityContactRole/fields/JU_C_InstractionService6__c.field-meta.xml
<CustomField>
    <fullName>JU_C_InstractionService6__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C:導入サービスへの継続確認_JU</label>
    <type>Checkbox</type>
</CustomField>