force-app/main/default/objects/OpportunityContactRole/fields/JU_C_SalesStaffConsult2__c.field-meta.xml
<CustomField>
    <fullName>JU_C_SalesStaffConsult2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C:営業担当へ相談あり2_JU</label>
    <type>Checkbox</type>
</CustomField>