force-app/main/default/objects/OpportunityContactRole/fields/JU_C_SalesStaffConsult4__c.field-meta.xml
<CustomField>
    <fullName>JU_C_SalesStaffConsult4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C:営業担当へ相談あり4_JU</label>
    <type>Checkbox</type>
</CustomField>