force-app/main/default/objects/OpportunityContactRole/fields/JU_M_GetContactAdress1__c.field-meta.xml
<CustomField>
    <fullName>JU_M_GetContactAdress1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>M:連絡先獲得_JU</label>
    <type>Checkbox</type>
</CustomField>