force-app/main/default/objects/OpportunityContactRole/fields/JU_M_NextAppointment3__c.field-meta.xml
<CustomField>
    <fullName>JU_M_NextAppointment3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>M:次回アポイント獲得3_JU</label>
    <type>Checkbox</type>
</CustomField>