force-app/main/default/objects/OpportunityContactRole/fields/JU_O_ExhibitionParticipate1__c.field-meta.xml
<CustomField>
    <fullName>JU_O_ExhibitionParticipate1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>O:展示会参加_JU</label>
    <type>Checkbox</type>
</CustomField>