force-app/main/default/objects/OpportunityContactRole/fields/JU_O_MailSubscribe4__c.field-meta.xml
<CustomField>
    <fullName>JU_O_MailSubscribe4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>O:メールでの事例購読_JU</label>
    <type>Checkbox</type>
</CustomField>