force-app/main/default/objects/OpportunityContactRole/fields/JU_O_NextAppointment2__c.field-meta.xml
<CustomField>
    <fullName>JU_O_NextAppointment2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>O:次回アポ獲得2_JU</label>
    <type>Checkbox</type>
</CustomField>