force-app/main/default/objects/OpportunityContactRole/fields/JU_O_SalesIntroduction4__c.field-meta.xml
<CustomField>
    <fullName>JU_O_SalesIntroduction4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>O:営業からの事例紹介_JU</label>
    <type>Checkbox</type>
</CustomField>