force-app/main/default/objects/OpportunityContactRole/fields/JU_O_WebAssess3__c.field-meta.xml
<CustomField>
    <fullName>JU_O_WebAssess3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>O:Web診断実施_JU</label>
    <type>Checkbox</type>
</CustomField>