force-app/main/default/objects/OpportunityContactRole/fields/OpportunityRecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityRecordTypeId__c</fullName>
    <formula>Opportunity.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*商談レコードタイプ</label>
    <type>Text</type>
</CustomField>