force-app/main/default/objects/OpportunityContactRole/fields/OpportunityStageName__c.field-meta.xml
<CustomField>
    <fullName>OpportunityStageName__c</fullName>
    <formula>TEXT( Opportunity.StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*商談フェーズ</label>
    <type>Text</type>
</CustomField>