force-app/main/default/objects/OpportunityContactRole/fields/Stagnation1__c.field-meta.xml
<CustomField>
    <fullName>Stagnation1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>停滞</label>
    <type>Checkbox</type>
</CustomField>