force-app/main/default/objects/OpportunityContactRole/fields/StagnationReason1__c.field-meta.xml
<CustomField>
    <fullName>StagnationReason1__c</fullName>
    <label>停滞理由</label>
    <length>255</length>
    <type>Text</type>
</CustomField>